# agente_antaq_sql

./: .dockerignore  .env.example  .gitignore  =2.0.0  DISCREPANCIAS_DOCUMENTACAO.md  Dockerfile  README.md  SCHEMA.md  pyproject.toml  requirements.txt
ai_agent_projeto/: 01_bigquery_config.md  02_schema_tabelas.md  03_dominio_negocio.md  04_views_consultaveis.md  05_exemplos_perguntas_sql.md  06_guia_desenvolvimento.md  ATUALIZACOES_IMPLEMENTACAO.md  README.md
app/: __init__.py  streamlit_app.py
app/components/: __init__.py  base.py  chat_tab.py  overview_tab.py  styles.py
app/utils/: __init__.py  formatting.py  session.py
config/: __init__.py  agent_config.yaml  bigquery_config.yaml  prompts.yaml
docs/: SMART_QUERY_ASSISTANT_ANALYSIS.md  projeto_pesquisa.md  projeto_pesquisa_completo.docx
scripts/: create_dicionario_dados.sql  populate_dicionario_dados.py  setup_vector_store.py  test_connection.py  test_metadata_tools.py
src/: __init__.py
src/agent/: __init__.py  graph.py  metadata_helper.py  nodes.py  prompts.py  state.py  tools.py
src/bigquery/: __init__.py  client.py  referential_helper.py  referential_schemas.py  schema.py  vector_store.py
src/llm/: __init__.py  config.py  factory.py
src/rag/: __init__.py  embeddings.py  examples_loader.py  retriever.py
src/utils/: __init__.py  formatting.py  logging_config.py  security.py  sentry_config.py  validation.py
tests/: __init__.py  conftest.py  test_performance.py
tests/test_bigquery/: __init__.py
tests/test_conversation/: test_conversation_flow.py
venv_new/: pyvenv.cfg
(+8 files in other folders)
